enhance navigation for teachers and admins and fix attendance typo

--- a/main_app/students/templates/students/enrolled_lectures.html
+++ b/main_app/students/templates/students/enrolled_lectures.html
@@ -37,7 +37,7 @@ block extra_css %}
       max-width: none;
     "
   >
-    <input
+    <!-- <input
       type="text"
       name="q"
       placeholder="Szukaj wykladu..."
@@ -49,7 +49,7 @@ block extra_css %}
       style="margin: 0; width: auto; padding: 0.75rem 1.5rem"
     >
       Szukaj
-    </button>
+    </button> -->
   </form>
 </div>
 
