--- a/main_app/students/templates/students/dashboard.html
+++ b/main_app/students/templates/students/dashboard.html
@@ -14,14 +14,14 @@ extra_css %}
   <nav class="dashboard-nav" aria-label="Nawigacja panelu ucznia">
     <a href="{{ url_for('students.pick_lecture') }}" class="dashboard-link">
       <span class="link-icon">➕</span>
-      <span>Zapisz sie na wyklad</span>
+      <span>Zapisz sie na wykład</span>
     </a>
     <a
       href="{{ url_for('students.enrolled_lectures') }}"
       class="dashboard-link"
     >
       <span class="link-icon">📚</span>
-      <span>Moje wyklady</span>
+      <span>Moje wykłady</span>
     </a>
   </nav>
 </section>
