--- a/main_app/teacher/templates/teacher/dashboard.html
+++ b/main_app/teacher/templates/teacher/dashboard.html
@@ -13,8 +13,8 @@ block extra_css %}
 
   <div class="lectures-info">
     <p>
-      Tutaj beda wyswietlane Twoje wyklady i narzedzia do zarzadzania
-      obecnoscia.
+      Tutaj będą wyświetlane Twoje wykłady i narzędzia do zarządzania
+      obecnością.
     </p>
     <a href="{{ url_for('teacher.lectures') }}" class="back-link"
       >Moje Wykłady</a
