--- a/main_app/admin/templates/admin/lectures.html
+++ b/main_app/admin/templates/admin/lectures.html
@@ -70,10 +70,10 @@ extra_css %}
             >Edytuj</a
           >
           <a href="{{ url_for('admin.delete_lecture', lid=lecture.lid) }}"
-            >Usun</a
+            >Usuń</a
           >
           <a href="{{ url_for('admin.manage_rooms', lid=lecture.lid) }}"
-            >Zarzadzaj Salami</a
+            >Zarządzaj salami</a
           >
         </td>
       </tr>
@@ -117,11 +117,11 @@ extra_css %}
       text-decoration: none;
       color: #1e293b;
     "
-    >Nastepna &raquo;</a
+    >Następna &raquo;</a
   >
   {% endif %}
 </div>
 
 {% else %}
-<p>Nie znaleziono zadnych wykladow</p>
+<p>Nie znaleziono żadnych wykładów</p>
 {% endif %} {% endblock %}
