--- a/main_app/auth/templates/auth/login.html
+++ b/main_app/auth/templates/auth/login.html
@@ -13,11 +13,11 @@
         <form method="POST" action="{{ url_for('auth.login') }}">
             <label for="email">Adres e-mail:</label>
             <input type="email" id="email" name="email" required /><br />
-            <label for="password">Haslo:</label>
+            <label for="password">Hasło:</label>
             <input type="password" id="password" name="password" required /><br />
             <button type="submit">Zaloguj</button>
         </form>
-        <a href="{{ url_for('auth.signup') }}">Zarejestruj sie</a>
+        <a href="{{ url_for('auth.signup') }}">Zarejestruj się</a>
     </div>
 </div>
 {% endblock %}
