--- a/main_app/auth/templates/auth/signup.html
+++ b/main_app/auth/templates/auth/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Signup - School Management System{% endblock %}
+{% block title %}Rejestracja - SchoolWeb{% endblock %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
@@ -17,9 +17,9 @@
             <input type="text" id="lastName" name="lastName" required /><br />
             <label for="email">Adres e-mail:</label>
             <input type="email" id="email" name="email" required /><br />
-            <label for="password">Haslo:</label>
+            <label for="password">Hasło:</label>
             <input type="password" id="password" name="password" required /><br />
-            <button type="submit">Zarejestruj sie</button>
+            <button type="submit">Zarejestruj się</button>
         </form>
         <a href="{{ url_for('auth.login') }}">Logowanie</a>
     </div>
